# tobasa-cpp

./: .gitignore  BUILD.md  CMakeDefaults.txt  CMakeLists.txt  LICENSE  README.md  build_all.cmd  build_all.sh
src/app_server/: CMakeLists.txt  README.md
src/app_server/cmake/: sources.cmake
src/app_server/configuration_embed/: appsettings.json  appsettings_header_rules.json  appsettings_lis.json
src/app_server/src/: api_result.h  app_common.cpp  app_common.h  app_resource.cpp  app_resource.h  app_util.cpp  app_util.h  build_info.cpp  build_info.h  clock.cpp  clock.h  database_service_factory_app.cpp  database_service_factory_app.h  db_repo_app.h  inja.hpp  inja_util.cpp  inja_util.h  main.cpp  main_helper.cpp  main_helper.h  matcher_factory.h  matcher_interface.h  matcher_regex.h  matcher_wildcard.h  page.cpp  page.h  settings_header_rules.h  tobasa_app.rc
src/app_server/src/core/: api_core_controller.cpp  api_core_controller.h  api_users_controller.cpp  api_users_controller.h  core_admin_controller.cpp  core_admin_controller.h  core_controller.cpp  core_controller.h  db_repo_user_acl.h  db_repo_user_acl_base.h
src/app_server/src/db_migrations/: 002_initial_base_module_test.h  003_initial_base_module_lis.h
src/app_server/src/lis/: api_lis_controller.cpp  api_lis_controller.h  api_lis_controller_devtest_lis1a.cpp  api_lis_controller_hl7.cpp  dto_hl7.h  dto_lis2a.h  engine_stats.h  lis_db_service_base.h  lis_db_service_dirui.h  lis_db_service_factory.cpp  lis_db_service_factory.h  lis_db_service_hl7.h  lis_db_service_hl7_devtest.h  lis_db_service_lis2a.h  lis_db_service_lis2a_devtest.h  lis_db_service_lis2a_dxh500.h  lis_db_service_lis2a_indiko.h  lis_db_service_tempate.h  lis_db_service_vidas.h  lis_db_service_vitek2_compact.h  lis_modul.cpp  lis_modul.h  lis_util.cpp  lis_util.h
src/app_server/src/middleware/: authentication.cpp  authentication.h  authorization.cpp  authorization.h  cache_control.cpp  cache_control.h  content_type.cpp  content_type.h  database_check.cpp  database_check.h  exception_handler.cpp  exception_handler.h  request_identification.cpp  request_identification.h  response_header_rule.cpp  response_header_rule.h  session.cpp  session.h
src/app_server/src/resources/: config_resources.h  template_lis_resources.h  template_resources.h  tls_asset_resources.h  wwwroot_resources.h
src/app_server/src/test/: test_controller.cpp  test_controller.h  test_controller_more.cpp  test_sql_ado_defs.h  test_sql_json_dto.h  test_sql_mysql_defs.h  test_sql_odbc_mssql_defs.h  test_sql_odbc_mysql_defs.h  test_sql_pgsql_defs.h  test_sql_sqlite_defs.h  test_sqldriver.h  util_u8.h
src/app_server/src/test_ws/: websocket_controller.cpp  websocket_controller.h
src/app_server/tls_asset/: 127.0.0.1.crt  127.0.0.1.key  dh2048.pem  localhost.crt
src/app_server/views/: admin_acls.tpl  admin_menus.tpl  admin_roles.tpl  admin_users.tpl  dashboard.tpl  index.tpl  login.tpl  logout.tpl  password.tpl  register.tpl  server_status.tpl  status_page.tpl  test_websocket.tpl  test_websocket_js.tpl  user_profile.tpl
src/app_server/views/dashboard/: dashboard_js_area.tpl  dashboard_js_bar.tpl  dashboard_js_pie.tpl
src/app_server/views/layouts/: layout_basic.tpl  layout_status.tpl  layout_tests.tpl  layout_vertical.tpl
src/app_server/views_lis/lis/: server_status.tpl  testdev_hl7.tpl  testdev_lis1a.tpl
src/app_server/wwwroot/css/: styles.min.css
src/app_server/wwwroot/js/: chat_types_samples.js  generate_pushid.js
src/ext/mariadb-connector-c/include/: CMakeLists.txt
src/ext/sqlite3_mc/: CMakeLists.txt  README.md
src/ext/sqlite3_mc/src/: sha2.c
src/samples/dynamic_lib/: CMakeLists.txt  main.cpp
src/samples/http_server/: CMakeLists.txt
src/samples/http_server/resources/: myCA.pem
src/samples/http_server/src/: main.cpp  tobasa_app.rc
src/samples/plugin_dummy/: CMakeLists.txt  README.md
src/samples/plugin_dummy/src/: dummy.cpp  (+1 more)
src/samples/tobasa/: CMakeLists.txt  README.md  main.cpp
src/samples/tobasasql/: CMakeLists.txt  main.cpp
src/tobasa/: CMakeLists.txt  README.md  build_note.txt
src/tobasa/cmake/: sources.cmake
src/tobasa/src/: base64.cpp  bytes_reader.cpp  config.cpp  crypt.cpp  datetime.cpp  dynamic_lib.cpp  exception.cpp  file_reader.cpp  hextodec.cpp  json.cpp  logger.cpp  logger_sink.cpp  logger_stdout.cpp  navigator.cpp  notifier.cpp  path.cpp  plugin_lib.cpp  plugin_manager.cpp  string_reader.cpp  task_manager.cpp  task_metadata.cpp  util.cpp  util_date.cpp  util_string.cpp  util_time.cpp  util_utf.cpp  uuid.cpp
src/tobasahttp/: CMakeDefaults.txt  CMakeLists.txt  README.md
src/tobasahttp/cmake/: sources.cmake
src/tobasalis/: CMakeLists.txt  README.md
src/tobasalis/cmake/: sources.cmake
src/tobasalis/note/: HL7_ORU_R01_RAYTO_CHEMRAY120_0.hl7  HL7_ORU_R01_RAYTO_CHEMRAY120_1.hl7  HL7_ORU_R01_RAYTO_CHEMRAY120_2.hl7  HL7_ORU_R01_RAYTO_CHEMRAY120_3.hl7  HL7_ORU_R01_RAYTO_CHEMRAY120_4.hl7  HL7_ORU_R01_RAYTO_CHEMRAY120_5.hl7  HL7_ORU_R01_RAYTO_CHEMRAY120_6.hl7  HL7_ORU_R01_RAYTO_CHEMRAY120_7.hl7  HL7_ORU_R01_RAYTO_CHEMRAY120_8.hl7  HL7_ORU_R01_RAYTO_CHEMRAY120_9.hl7
src/tobasasql/: CMakeDefaults.txt  CMakeLists.txt  README.md
src/tobasasql/cmake/: sources.cmake
src/tobasasql/src/: adodb_command.cpp  adodb_connection.cpp  adodb_helper.cpp  adodb_result.cpp  adodb_table_helper.cpp  adodb_util.cpp  com_variant_helper.cpp  database_connector.cpp  database_service_factory.cpp  mysql_command.cpp  mysql_connection.cpp  mysql_helper.cpp  mysql_result.cpp  mysql_table_helper.cpp  mysql_util.cpp  mysql_variant_helper.cpp  odbc_connection.cpp  odbc_helper.cpp  odbc_parameter.cpp  odbc_result.cpp  odbc_table_helper.cpp  odbc_util.cpp  pgsql_connection.cpp  pgsql_helper.cpp  pgsql_result.cpp  pgsql_table_helper.cpp  pgsql_util.cpp  sql_connection_common.cpp  sql_connection_pool.cpp  sql_parameter_rewriter.cpp  sql_query_option.cpp  sql_result_common.cpp  sqlite_connection.cpp  sqlite_helper.cpp  sqlite_result.cpp  sqlite_table_helper.cpp  sqlite_util.cpp  util.cpp
src/tobasaweb/: CMakeLists.txt  README.md
src/tobasaweb/cmake/: sources.cmake
(+506 files in other folders)
